@@ -33,7 +33,6 @@
 
 #ifdef __cplusplus
 extern "C" {
-#pragma }
 #endif
 
 
