@@ -31,7 +31,6 @@
 
 #ifdef __cplusplus
 extern "C" {
-#pragma }
 #endif
 
 
